--- a/src/main/resources/org/nemesis/projectile/BaseProjectile.json
+++ b/src/main/resources/org/nemesis/projectile/BaseProjectile.json
@@ -1,12 +1,13 @@
 {
-  "id": "Unit",
+  "id": "Projectile",
   "pane": {
-    "image": "image/Unit1Scaled",
-    "scaleX": 2,
-    "scaleY": 2
+    "image": "image/BaseProjectile.png",
+    "scaleX": 1,
+    "scaleY": 1
   },
-  "movementSpeed": 1.0,
-  "damage": 1.0,
-  "criticalDamage": 2.0,
-  "criticalChance": 0.6
+  "movementSpeed": 6.0,
+  "damage": 6.0,
+  "criticalDamage": 2.4,
+  "criticalChance": 0.3,
+  "range": 2000
 }
