--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,14 @@
 		<maven.compiler.release>${project.javaVersion}</maven.compiler.release>
 	</properties>
 
+	<repositories>
+		<!-- For snapshots -->
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<!-- Graphics -->
 		<dependency>
@@ -30,9 +38,9 @@
 			<version>2.10.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.dosl</groupId>
+			<groupId>com.github.Kiyotoko</groupId>
 			<artifactId>dosl4j</artifactId>
-			<version>0.1.0</version>
+			<version>-SNAPSHOT</version>
 		</dependency>
 		<!-- Annotations -->
 		<dependency>
