--- a/src/main/resources/org/nemesis/projectile/BaseProjectile.json
+++ b/src/main/resources/org/nemesis/projectile/BaseProjectile.json
@@ -1,14 +1,13 @@
 {
-  "id": "Projectile",
+  "id": "BaseProjectile",
   "pane": {
     "image": "image/BaseProjectile.png",
     "scaleX": 1,
     "scaleY": 1
   },
-  "movementSpeed": 6.0,
-  "damage": 6.0,
-  "criticalDamage": 2.4,
-  "criticalChance": 0.3,
-  "range": 2000,
-  "rotatable": false
+  "movementSpeed": 3.0,
+  "damage": 3.5,
+  "criticalDamage": 2.0,
+  "criticalChance": 0.24,
+  "range": 1000
 }
